idea/testData/checkerWithErrorTypes/full/BreakContinue.jet
class C {

    fun f (a : Boolean, b : Boolean) {
        @b (while (true)
          @a {
            <!NOT_A_LOOP_LABEL!>break@f<!>
            break
            break@b
            <!NOT_A_LOOP_LABEL!>break@a<!>
          })

        <!BREAK_OR_CONTINUE_OUTSIDE_A_LOOP!>continue<!>

        @b (while (true)
          @a {
            <!NOT_A_LOOP_LABEL!>continue@f<!>
            continue
            continue@b
            <!NOT_A_LOOP_LABEL!>continue@a<!>
          })

        <!BREAK_OR_CONTINUE_OUTSIDE_A_LOOP!>break<!>

        <!NOT_A_LOOP_LABEL!>continue@f<!>
        <!NOT_A_LOOP_LABEL!>break@f<!>
    }

}